[package]
name = "l4iot"
version = "0.1.0"
authors = ["Eugene Tolmachev <eugene.tolmachev@prolucid.ca>"]
keywords = ["arm", "cortex-m", "stm32"]
categories = ["asynchronous", "embedded", "hardware-support", "no-std"]
description = "Board Support Crate for the STM32L4x5"
license = "MIT OR Apache-2.0"
repository = "https://github.com/et1975/l4iot"

[dependencies.embedded-hal]
git = "https://github.com/japaric/embedded-hal"
rev = "7d904f515d15fd5fe7ea34e18820ea83e2651fa2"

[dependencies.stm32l4x5]
git = "https://github.com/et1975/stm32l4x5"
rev = "af31b00ad6bdd2b14cf09fe76566676cf5333d40"
features = ["rt"]

[dependencies.nb]
git = "https://github.com/japaric/nb"

[dependencies]
static-ref = "0.2.0"
volatile-register = "0.2.0"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.cortex-m-rt]
version = "0.3.6"
features = ["abort-on-panic"]

[dependencies.cortex-m]
version = "0.3.1"

[dev-dependencies]
cortex-m = "0.3.1"
cortex-m-rtfm = "0.2.1"
cortex-m-semihosting = "0.2.0"

[profile.release]
lto = true
debug = true